--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     <nav>
         <ul>
-            <li><a href="#sec_profile">profile</a></li>
+            <li><a href="#sec_profile">profile!</a></li>
           <li><a href="#ican">出来ること</a></li>
             <li><a href="#sec_port">portfolio</a></li>
         </ul>
