--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -8,7 +8,7 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Murecho:wght@100..900&family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
-<title>portfolio|詳細ページ</title>
+<title>portfolio|詳細ページ2</title>
   <link href="style.css" rel="stylesheet" type="text/css">
   <link href="css/magnific-popup.css" rel="stylesheet" type="text/css">
 </head>
