--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     <nav>
         <ul>
-            <li><a href="#sec_profile">profile!</a></li>
+            <li><a href="#sec_profile">profile</a></li>
           <li><a href="#ican">出来ること</a></li>
             <li><a href="#sec_port">portfolio</a></li>
         </ul>
@@ -92,6 +92,7 @@
             </li>
           <li class="inview"><a href="portfoliopage.html#flower"><img src="img/thumbnail/hana_top.jpg" width="350" height="250" alt=""/></a>
           </li>
+          
           <li class="inview"><a href="portfoliopage.html#pethotel"><img src="img/thumbnail/pet_hotel_top.jpg" width="350" height="250" alt=""/></a></li>
           <li class="inview"><a href="portfoliopage.html#workshop"><img src="img/thumbnail/workshop_top.jpg" width="350" height="250" alt=""/></a></li>
         </ul>
