--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
         </ul>
         <h3>Banner/Eye-catching</h3>
         <ul class="list_banner">
+          <li class="inview"><a href="portfoliopage.html#bungu"><img src="img/thumbnail/bungu.jpg" width="350" height="250" alt=""/></a>
+          </li>
            <li class="inview"><a href="portfoliopage.html#gacha"><img src="img/thumbnail/gacha.jpg" width="350" height="250" alt=""/></a>
           </li>
           <li class="inview"><a href="portfoliopage.html#jyunrei"><img src="img/thumbnail/jyunrei_top.jpg" width="350" height="250" alt=""/></a>
