--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -75,6 +75,23 @@
     <div class="h2">
     <h2>Banner/Eye-catching</h2>
     </div>
+    <div class="box" id="bungu">
+      <p class="works_img_x"><a href="img/bungu.jpg"><img src="img/bungu.jpg"  alt=""/></a></p>
+      <h3>自主制作　バナー：文房具販売催事</h3>
+      <dl>
+          <dt>制作時期</dt>
+          <dd>2024.8.3</dd>
+  <dt>制作時間</dt>
+          <dd>310分</dd>
+          <dt>使用ツール</dt>
+          <dd>Photoshop/Illustrator</dd>
+          <dt>ターゲット</dt>
+          <dd>文房具やジャーナリングが好きな方
+          </dd>
+  <dt>作品の説明</dt>
+          <dd>幕が開き、文具たちがステージに出てくる様子をイメージしました。イラストは塗りを付けずに、幕はドットでトーンのように色づけし、よりアナログ感を感じられるようにしました。</dd>
+      </dl>
+      </div>
   <div class="box" id="gacha">
         <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt=""/></a></p>
         <h3>自主制作　ゲーム内バナー：ピックアップガチャ</h3>
