背景とか変えた

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 
          <section class="sec_profile" id="sec_profile">
              <div class="profile1">
-                 <figure class="top_img"><img src="img/top.jpg" alt="ME"/></figure>
+                 <figure class="top_img"><img src="img/top-img.png" alt="ME"/></figure>
                  <div class="plo1_text">
                      <div class="h2">
     <h2>profile</h2>
                      </div>
                      <h4>吉田　愛梨 </h4>
-                   <p>１９９７年生まれ、横須賀出身　犬が大好き。得意なことは歌うこと、苦手なことは球技。<br>２０２４年５月～WEBデザインの勉強を始める。</p>
+                   <p>1997年生まれ横須賀出身
+          2024年5月　ICAテラハウス（職業訓練）WEBエキスパートコース入校。
+          犬とペンギンが好き。特技は歌うことで、趣味は散歩犬を見ること・映画やアニメ鑑賞・ゲーム・競馬など。</p>
                   
                  </div>
              </div>
@@ -52,7 +54,7 @@
             <div class="profile2">
                 <div>
                     <h4>デザイン</h4>
-					<figure><img src="img/webdesign.svg" alt=""/></figure>
+					<figure><img src="img/design.svg" alt=""/></figure>
                     <p>WEBデザイン/バナー/サムネイル/ロゴ等を作成できます。Photoshop・illustratorを主に使用しています。</p>
                 </div>
                 <div>
@@ -80,6 +82,8 @@
         </ul>
         <h3>Banner/Eye-catching</h3>
         <ul class="list_banner">
+            <li class="inview"><a href="portfoliopage.html#hiyomori"><img src="img/thumbnail/hiyomori.jpg" width="700" height="500" alt=""/></a>
+          </li>
           <li class="inview"><a href="portfoliopage.html#bungu"><img src="img/thumbnail/bungu.jpg" width="350" height="250" alt=""/></a>
           </li>
            <li class="inview"><a href="portfoliopage.html#gacha"><img src="img/thumbnail/gacha.jpg" width="350" height="250" alt=""/></a>
