--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -37,7 +37,7 @@
     <p class="aisatsu">ポートフォリオをご覧いただきありがとうございます。<br>
     サムネイルをクリックすると、デザイン全体を拡大してご覧いただけます。</p>
   <div class="h2">
-    <h2>Web Design</h2>
+    <h2>Webデザイン</h2>
   </div>
   <div class="box" id="pickles">
     <p class="works_img"><a href="pickles/pickles1.jpg" title="pickles"><img src="img/thumbnail/pickles_top.jpg" width="350" height="250" alt=""/></a></p>
@@ -73,10 +73,27 @@
   </div>
  
     <div class="h2">
-    <h2>Banner/Eye-catching</h2>
+    <h2>バナー/アイキャッチ画像</h2>
     </div>
+        <div class="box" id="hiyomori">
+      <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt=""/></a></p>
+      <h3>自主制作　アイキャッチ画像：ひよこの杜　リニューアルオープン</h3>
+      <dl>
+          <dt>制作時期</dt>
+          <dd>2024.8.4</dd>
+  <dt>制作時間</dt>
+          <dd>350分</dd>
+          <dt>使用ツール</dt>
+          <dd>Illustrator</dd>
+  <dt>作品の説明</dt>
+          <dd>性別を問わないデザインにしようと思い、黄色と青をメインにパキッと目立つ配色にしています。
+        店で何が遊べるのかをわかりやすくイラスト化しました。実際の店内画像を背景に使い、ボードゲームのお店に入店したことのない方でも明るい場所であることが伝われば良いなと考えました。</dd>
+      </dl>
+        <p class="thanks">友人のお店のリニューアル記念で作成したものを、許可を得て掲載しています。
+            <a href="https://hiyo-mori.com/">https://hiyo-mori.com/</a></p>
+      </div>
     <div class="box" id="bungu">
-      <p class="works_img_x"><a href="img/bungu.jpg"><img src="img/bungu.jpg"  alt=""/></a></p>
+      <p class="works_img_x"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt=""/></a></p>
       <h3>自主制作　バナー：文房具販売催事</h3>
       <dl>
           <dt>制作時期</dt>
@@ -85,12 +102,11 @@
           <dd>310分</dd>
           <dt>使用ツール</dt>
           <dd>Photoshop/Illustrator</dd>
-          <dt>ターゲット</dt>
-          <dd>文房具やジャーナリングが好きな方
-          </dd>
   <dt>作品の説明</dt>
-          <dd>幕が開き、文具たちがステージに出てくる様子をイメージしました。イラストは塗りを付けずに、幕はドットでトーンのように色づけし、よりアナログ感を感じられるようにしました。</dd>
+          <dd>幕が開き、文具たちがステージに出てくる様子をイメージしました。イラストは塗りを付けずに幕はブラシで色をつけ、よりアナログ感を感じられるようにしました。</dd>
       </dl>
+        <p class="thanks">背景　原稿用紙素材をお借りしました。
+          <a href="https://free-paper-texture.com/">https://free-paper-texture.com/</a></p>
       </div>
   <div class="box" id="gacha">
         <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt=""/></a></p>
@@ -102,11 +118,10 @@
             <dd>360分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>20～30代男性</dd>
     <dt>作品の説明</dt>
             <dd>背景は学校の教室の写真をイラスト風に加工し、アクアブルーを重ねました。キラキラと光を散らし、豪華な印象を演出しています。全体的に制服をイメージしたネイビーを多用していますが、青でまとめすぎるとさみしくなってしまったのでオレンジも使って明るさを足しました。ロゴやキャンペーン内容の部分はぷっくりと立体感を出し、文字はグラデーションや境界線で装飾しています。</dd>
         </dl>
+      <p class="thanks">イラストをお借りしました。<a href="https://tachie.trpg-start.com/">https://tachie.trpg-start.com/</a></p>
     </div>
     <div class="box" id="jyunrei">
         <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt=""/></a></p>
@@ -118,8 +133,6 @@
             <dd>220分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>好きなアニメやドラマがあり、いわゆる推しがいる若い世代</dd>
     <dt>作品の説明</dt>
             <dd>ビビットな色を使用し、目に飛び込みやすいようにしました。切り抜いた写真は縁取り　お気に入りのスクラップブックのように、立体感が出過ぎないようにしています。 </dd>
         </dl>
@@ -134,8 +147,6 @@
             <dd>180分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>ナチュラルな服装を好む２０代女性</dd>
     <dt>作品の説明</dt>
             <dd>OFF率が一目でわかるよう配置しました。爽やかで夏らしい色使いを心掛け、オンラインストア限定のセールということでボタンのようなあしらいをしました。</dd>
         </dl>
@@ -150,8 +161,6 @@
             <dd>150分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>SNSを頻繁に更新している女性</dd>
     <dt>作品の説明</dt>
             <dd>こんな写真をここで撮りたい！と思ってもらえるよう、カフェで撮影した可愛らしい写真を複数使用しました。柔らかなピンク・黄色をメインに　丸みのあるフォントや縁取りで全体的にキュートなイメージに仕上げました。</dd>
         </dl>
@@ -166,8 +175,6 @@
             <dd>200分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>甘いもの・催事によく出掛ける２０〜３０代女性</dd>
     <dt>作品の説明</dt>
             <dd>ドーナツのコーティングのツヤ感を随所にあしらい、生地を意識したほっこりとした色使いとふっくら丸みのあるフォントにしました。”ドーナツフェスタ”のイベント名を認知してもらいたかったので、よく目に留まるようによりポップに編集しました。</dd>
         </dl>
@@ -182,8 +189,6 @@
             <dd>140分</dd>
             <dt>使用ツール</dt>
             <dd>Photoshop</dd>
-            <dt>ターゲット</dt>
-            <dd>生活に少しゆとりのある３０代女性</dd>
     <dt>作品の説明</dt>
             <dd>お花で気分や生活が明るく軽やかになることを清々しい緑で表現しました。写真を目立たせるためにできるだけシンプルに、けれども味気なくはならないよう　下線や色使い等あしらいを工夫しました。</dd>
         </dl>
