サムネを変えたりとか

--- a/index.html
+++ b/index.html
@@ -55,18 +55,30 @@
             <div class="profile2">
                 <div>
                     <h4>デザイン</h4>
-					<figure><img src="img/design.svg" alt=""/></figure>
-                    <p>WEBデザイン/バナー/サムネイル/ロゴ等を作成できます。Photoshop・illustratorを主に使用しています。</p>
+					<figure><img src="img/design.svg" class="animation" alt=""/></figure>
+                    <p>WEBデザイン/バナー/サムネイル/ロゴ等を作成できます。</p>
+					<dl class ="tools">
+					  <dt>使用するツール</dt>
+						<dd>Photoshop</dd>
+						<dd>Illustrator</dd>
+						<dd>Adobe　XD</dd>
+					</dl>
                 </div>
                 <div>
                     <h4>コーディング</h4>
-					<figure><img src="img/code.svg" alt=""/></figure>
-                    <p>HTML/CSS/JavaScript(jQuery)を用いてWEBページ制作が出来ます。</p>
+					<figure><img src="img/code.svg" class="animation" alt=""/></figure>
+                    <p>HTML/CSS/JavaScript(jQuery)を用いてWEBページ制作が出来ます。コーディングにはDream Weaverを使用しています。</p>
                 </div>
               <div>
               <h4>イラスト</h4>
-				  <figure id="illust"><img src="img/illust.svg" alt=""/></figure>
-              <p>PhotoshopやProcreateを使用し、簡単なイラスト制作が可能です。</p></div>
+				  <figure id="illust"><img src="img/illust.svg" class="animation" alt=""/></figure>
+              <p>簡単なイラスト制作が可能です。</p>
+				<dl class ="tools">
+					<dt>使用するツール</dt>
+						<dd>Pro create</dd>
+						<dd>Illustrator</dd>
+					</dl>
+			 </div>
             </div>
         </section>
  
@@ -93,8 +105,6 @@
             </li>
           <li class="inview"><a href="portfoliopage.html#flower"><img src="img/thumbnail/hana_top.jpg" width="350" height="250" alt=""/></a>
           </li>
-          
-          <li class="inview"><a href="portfoliopage.html#pethotel"><img src="img/thumbnail/pet_hotel_top.jpg" width="350" height="250" alt=""/></a></li>
           <li class="inview"><a href="portfoliopage.html#workshop"><img src="img/thumbnail/workshop_top.jpg" width="350" height="250" alt=""/></a></li>
         </ul>
         <h3>Web Design</h3>
@@ -108,7 +118,7 @@
       <h3>logo etc</h3>
       <ul class="list_other">
 		  <li class="inview"><a href="portfoliopage.html#pictgram"><img src="img/thumbnail/pictgram.jpg" width="700" height="500" alt=""/></a></li>
-      <li class="inview"><a href="portfoliopage.html#nanon"><img src="img/thumbnail/nanon_top.jpg" width="350" height="250" alt=""/></a></li>
+ 
         <li class="inview"><a href="portfoliopage.html#kaidan"><img src="img/thumbnail/kaidan_top.jpg" width="350" height="250" alt=""/></a></li>
       </ul>
         
@@ -132,6 +142,7 @@
             </ul>
      <footer>
   <p>Thank you for reading through to the end!</p>
+		 <p>Airi-y</p>
 </footer>
     </div >
    
