--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -44,7 +44,8 @@
     </div>
         <div class="box" id="hiyomori">
       <p class="works_img_x"><a href="img/hiyomori.jpg"><img src="img/hiyomori.jpg"  alt=""/></a></p>
-      <h3>自主制作　アイキャッチ画像：ひよこの杜　リニューアルオープン</h3>
+      <h3><span>自主制作</span>　<span>アイキャッチ画像</span></h3>
+		<h4>ひよこの杜　リニューアルオープン</h4>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.8.4</dd>
@@ -56,12 +57,13 @@
           <dd>性別を問わないデザインにしようと思い、黄色と青をメインにパキッと目立つ配色にしています。
         店で何が遊べるのかをわかりやすくイラスト化しました。実際の店内画像を背景に使い、ボードゲームのお店に入店したことのない方でも明るい場所であることが伝われば良いなと考えました。</dd>
       </dl>
-        <p class="thanks">友人のお店のリニューアル記念で作成したものを、許可を得て掲載しています。
-            <a href="https://hiyo-mori.com/">https://hiyo-mori.com/</a></p>
+        <p class="thanks">※友人のお店のリニューアル記念で作成したものを、許可を得て掲載しています。
+            <a href="https://hiyo-mori.com/" target="_blank">https://hiyo-mori.com/</a></p>
       </div>
     <div class="box" id="bungu">
       <p class="works_img_x"><a href="img/bungu-100.jpg"><img src="img/bungu-100.jpg"  alt=""/></a></p>
-      <h3>自主制作　バナー：文房具販売催事</h3>
+      <h3><span>自主制作</span> <span>バナー</span></h3>
+		<h4>文房具販売催事</h4>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.8.3</dd>
@@ -72,12 +74,13 @@
   <dt>作品の説明</dt>
           <dd>幕が開き、文具たちがステージに出てくる様子をイメージしました。イラストは塗りを付けずに幕はブラシで色をつけ、よりアナログ感を感じられるようにしました。</dd>
       </dl>
-        <p class="thanks">背景　原稿用紙素材をお借りしました。
-          <a href="https://free-paper-texture.com/">https://free-paper-texture.com/</a></p>
+        <p class="thanks">※背景　原稿用紙素材をお借りしました。
+          <a href="https://free-paper-texture.com/" target="_blank">https://free-paper-texture.com/</a></p>
       </div>
   <div class="box" id="gacha">
         <p class="works_img_x"><a href="img/gacha.jpg"><img src="img/gacha.jpg" width="1025" height="600" alt=""/></a></p>
-        <h3>自主制作　ゲーム内バナー：ピックアップガチャ</h3>
+        <h3><span>自主制作</span> <span>バナー</span></h3>
+	  <h4>ピックアップガチャ</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.25</dd>
@@ -88,11 +91,12 @@
     <dt>作品の説明</dt>
             <dd>背景は学校の教室の写真をイラスト風に加工し、アクアブルーを重ねました。キラキラと光を散らし、豪華な印象を演出しています。全体的に制服をイメージしたネイビーを多用していますが、青でまとめすぎるとさみしくなってしまったのでオレンジも使って明るさを足しました。ロゴやキャンペーン内容の部分はぷっくりと立体感を出し、文字はグラデーションや境界線で装飾しています。</dd>
         </dl>
-      <p class="thanks">イラストをお借りしました。<a href="https://tachie.trpg-start.com/">https://tachie.trpg-start.com/</a></p>
+      <p class="thanks">※イラストをお借りしました。<a href="https://tachie.trpg-start.com/" target="_blank">https://tachie.trpg-start.com/</a></p>
     </div>
     <div class="box" id="jyunrei">
         <p class="works_img_y"><a href="img/jyunrei.jpg"><img src="img/jyunrei.jpg" width="750" height="1000" alt=""/></a></p>
-        <h3>自主制作　サイト内誘導バナー：聖地巡礼特集</h3>
+        <h3><span>自主制作</span> <span>サイト内誘導バナー</span></h3>
+		<h4>聖地巡礼特集</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.20</dd>
@@ -106,8 +110,8 @@
     </div>
     <div class="box" id="summersale">
     <p class="works_img_x"><a href="img/summersale_banner.jpg" title="SummerSale"><img src="img/summersale_banner.jpg" width="1000" height="500" alt=""/></a></p>
-        <h3>自主制作　EC誘導バナー：サマーセール広告</h3>
-        <dl>
+        <h3><span>自主制作</span> <span>バナー</span></h3>
+        <h4>サマーセール広告</h4><dl>
             <dt>制作時期</dt>
             <dd>2024.7.20</dd>
     <dt>制作時間</dt>
@@ -120,7 +124,8 @@
     </div>
     <div class="box" id="animalcafe">
         <p class="works_img"><a href="img/animalcafe.jpg" title="Animal Cafe"><img src="img/animalcafe.jpg" width="780" height="780" alt=""/></a></p>
-        <h3>自主制作　特集記事アイキャッチ：動物カフェ</h3>
+        <h3><span>自主制作</span> <span>アイキャッチ</span></h3>
+		<h4>動物カフェ</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.20</dd>
@@ -134,7 +139,8 @@
     </div>
     <div class="box" id="donut">
         <p class="works_img"><a href="img/donut_banner.jpg" title="ドーナツフェスタ"><img src="img/donut_banner.jpg" width="672" height="560" alt=""/></a></p>
-        <h3>自主制作　広告バナー：ドーナツフェスタ</h3>
+        <h3><span>自主制作</span> <span>バナー</span></h3>
+		<h4>ドーナツフェスタ</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.18</dd>
@@ -148,7 +154,8 @@
     </div>
     <div class="box" id="flower">
         <p class="works_img"><a href="img/hana_top.jpg" title="花の定期便"><img src="img/hana_top.jpg" width="672" height="560" alt=""/></a></p>
-        <h3>自主制作　LP誘導バナー：花の定期便</h3>
+        <h3><span>自主制作</span> <span>バナー</span></h3>
+		<h4>花の定期便</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.18</dd>
@@ -160,21 +167,10 @@
             <dd>お花で気分や生活が明るく軽やかになることを清々しい緑で表現しました。写真を目立たせるためにできるだけシンプルに、けれども味気なくはならないよう　下線や色使い等あしらいを工夫しました。</dd>
         </dl>
     </div>
-    <div class="box" id="pethotel">
-        <p class="works_img"><a href="img/pethotel.png"　title="ペットホテル"><img src="img/pethotel.png" width="500" height="500" alt=""/></a></p>
-         <h3>自主制作　誘導バナー：ペットホテル</h3>
-        <dl>
-            <dt>制作時期</dt>
-            <dd>2024.6</dd>
-    <dt>制作時間</dt>
-            <dd>90分</dd>
-            <dt>使用ツール</dt>
-            <dd>Photoshop</dd>
-        </dl>
-    </div>
     <div class="box" id="workshop">
-        <p class="works_img"><a href="img/thumbnail3.png"　title="ワークショップ"><img src="img/アートボード 2.png" width="300" height="250" alt=""/></a></p>
-              <h3>自主制作 誘導バナー:ワークショップ</h3>
+      <p class="works_img"><a href="img/thumbnail3.png"　title="ワークショップ"><img src="img/アートボード 2.png" width="300" height="250" alt=""/></a></p>
+              <h3><span>自主制作</span> <span>バナー</span></h3>
+		<h4>ワークショップ</h4>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.5</dd>
@@ -190,7 +186,8 @@
   </div>
   <div class="box" id="pickles">
     <p class="works_img"><a href="pickles/pickles1.jpg" title="pickles"><img src="img/thumbnail/pickles_top.jpg" width="350" height="250" alt=""/></a></p>
-      <h3>自主制作：「Pickles」WEBページ</h3>
+      <h3><span>自主制作</span> <span>WEBページ</span></h3>
+	  <h4>「Pickles」</h4>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.5</dd>
@@ -205,7 +202,8 @@
   </div>
   <div class="box" id="LC">
       <p class="works_img"><a href="leadingCompany/artbord2.jpg" title="LeadingCompany"><img src="img/thumbnail/leadingCompany.jpg" width="350" height="250" alt=""/></a></p>
-      <h3>自主制作：「LeadingCompany」WEBページ</h3>
+      <h3><span>自主制作</span> <span>WEBページ</span></h3>
+	  <h4>「LeadingCompany」</h4>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.6</dd>
@@ -217,16 +215,14 @@
           <dd>信頼性とプロフェッショナルな印象を与えることを意識し、色味を統一・シンプルに仕上げました。また、冷たくなりすぎないように暖色を採用しています。読みやすさを第一に考え、見た目はスッキリと過度な装飾は避けました。<br>
               </dd>
       </dl>
-     <!--<p class="pagelink"><a href="leadingCompany/index.html" target="_blank">HTML/CSSで作成したページ（トップページ）
- </a></p>-->
   </div>
     
   <div class="h2">
-    <h2>Logo etc</h2>
+    <h2>その他</h2>
   </div>
 	<div class="box" id="pictgram">
     <p class="works_img_x"><a href="img/pictgram_sise.jpg"　title="イラスト風加工"><img src="img/pictgram_sise.jpg" width="964" height="513" alt=""/></a></p>
-              <h3>自主制作 ピクトグラム</h3>
+              <h3><span>自主制作</span> <span>ピクトグラム</span></h3>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.7.31</dd>
@@ -239,21 +235,10 @@
         </dl>
       <p class="beforelink"><a href="img/2020-05-24_14-28-31_459.jpeg">元の写真はこちら</a></p>
   </div>
-  <div class="box" id="nanon">
-    <p class="works_img"><a href="img/logo_nanon.png"　title="イベントロゴ"><img src="img/nanon_thumbnail1.png" width="280" height="280" alt=""/></a></p>
-            <h3>自主制作 イベントロゴ</h3>
-        <dl>
-            <dt>制作時期</dt>
-            <dd>2024.6</dd>
-    <dt>制作時間</dt>
-            <dd>140分</dd>
-            <dt>使用ツール</dt>
-            <dd>Photoshop/Illustrator</dd>
-        </dl>
-  </div>
+  
   <div class="box" id="kaidan">
     <p class="works_img_x"><a href="img/kaidan.jpg"　title="イラスト風加工"><img src="img/kaidan.jpg" width="1280" height="720" alt=""/></a></p>
-              <h3>自主制作 写真→イラスト風加工:階段</h3>
+              <h3><span>自主制作</span> <span>写真加工</span></h3>
         <dl>
             <dt>制作時期</dt>
             <dd>2024.6</dd>
