--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -35,8 +35,8 @@
     </nav>
   </header>
 <main>
-    <p class="aisatsu">ポートフォリオをご覧いただきありがとうございます。<br>
-    サムネイルをクリックすると、拡大してご覧いただけます。</p>
+    <p class="aisatsu"><span>ポートフォリオをご覧いただき</span><span>ありがとうございます。</span><br>
+    <span>サムネイルをクリックしますと</span><span>拡大してご覧いただけます。</span></p>
    <div class="h2">
     <h2>Webデザイン</h2>
   </div>
@@ -44,7 +44,7 @@
     <p class="works_img"><img src="img/thumbnail/leafcoffee.png" width="1080" height="756" alt=""/></p>
       <h3><span>自主制作</span> <span>WEBページ</span></h3>
 	  <h4>「leafcoffee」</h4>
-        <p><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">https://airi-pear.github.io/leafcoffee/leafcoffee.html</a></p>
+        <p><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">完成したページへ</a></p>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.8.16</dd>
@@ -61,7 +61,7 @@
     <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt=""/></p>
       <h3><span>自主制作</span> <span>WEBページ</span></h3>
 	  <h4>「ペンギンのこと、知ってる？」</h4>
-      <p><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">https://airi-pear.github.io/penguin/penguin-index.html</a></p>
+      <p><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
 <dl>
     <dt>制作時期</dt>
           <dd>2024.8.10</dd>
