言葉変えた

--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -42,14 +42,14 @@
   </div>
     <div class="box" id="leafcoffee">
     <p class="works_img"><img src="img/thumbnail/leafcoffee.png" width="1080" height="756" alt=""/></p>
-      <h3><span>自主制作</span> <span>WEBページ</span></h3>
+      <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
 	  <h4>「leafcoffee」</h4>
         <p><a href="https://airi-pear.github.io/leafcoffee/leafcoffee.html" target="_blank">完成したページへ</a></p>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.8.16</dd>
           <dt>制作時間</dt>
-          <dd>500分</dd>
+          <dd>600分</dd>
           <dt>使用ツール</dt>
           <dd>adobeXD/Dreamweaver</dd>
           <dt>作品の説明</dt>
@@ -59,7 +59,7 @@
   </div>
   <div class="box" id="penguin">
     <p class="works_img"><img src="img/thumbnail/penguin.png" width="1080" height="756" alt=""/></p>
-      <h3><span>自主制作</span> <span>WEBページ</span></h3>
+      <h3><span>自主制作</span> <span>WEBページ制作</span></h3>
 	  <h4>「ペンギンのこと、知ってる？」</h4>
       <p><a href="https://airi-pear.github.io/penguin/penguin-index.html" target="_blank">完成したページへ</a></p>
 <dl>
@@ -76,13 +76,13 @@
   </div>
    <div class="box" id="pickles">
     <p class="works_img"><a href="pickles/pickles1.jpg"><img src="img/thumbnail/pickles.png" width="1080" height="756" alt=""/></a></p>
-      <h3><span>自主制作</span> <span>WEBページ</span></h3>
+      <h3><span>自主制作</span> <span>WEBデザイン</span></h3>
 	  <h4>「Pickles」</h4>
       <dl>
           <dt>制作時期</dt>
           <dd>2024.5</dd>
           <dt>制作時間</dt>
-          <dd>500分</dd>
+          <dd>180分</dd>
           <dt>使用ツール</dt>
           <dd>Photoshop</dd>
           <dt>作品の説明</dt>
